tests/pass/IUCom.java
package pass;

public class IUCom {
	public int iUCom(int int1) {
		return ~int1;
	}
}
