tests/fail/IUCom.java
package fail;

import java.lang.System;

public class IUCom {
	public static void main(String[] args) {
		System.out.println(~ true);
	}
}
